--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 altgraph==0.17.2
 future==0.18.2
+isort==5.10.1
 numpy==1.21.4
+pandas==1.5.1
 pefile==2021.9.3
 pyinstaller==4.8
 pyinstaller-hooks-contrib==2021.5
+python-dateutil==2.8.2
+pytz==2022.6
 pywin32-ctypes==0.2.0
+six==1.16.0
